--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6617d894e3eac819462a57ad"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://assets-global.website-files.com/6617d894e3eac819462a57ad/js/webflow.03137f935.js"
+    <script src="/script.js"
         type="text/javascript"></script>
 </body>
 
